--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       margin: 0;
     }
     body {
-      background: url(./src/assets/img/galaxy.png) center 100% no-repeat;
+      /* background: url(./src/assets/img/galaxy.png) center 100% no-repeat; */
       background-size: cover;
+      background-color: #000;
     }
   </style>
 </head>
@@ -24,7 +25,7 @@
   <script src="./src/lib/orbitControls.js"></script>
   <script src="./src/lib/threeGeoJSON.js"></script>
 
-  <script src="./src/variables.js"></script>
+  <script src="./src/main/variables.js"></script>
   <script src="./src/app.js" type="module"></script>
 </body>
 
