--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="renderer" content="webkit">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" id="web-icon" href="<%= BASE_URL %>logo.ico">
+    <!-- <link rel="icon" id="web-icon" href="<%= BASE_URL %>logo.ico"> -->
     <title></title>
 
      <!-- 使用CDN的CSS文件 -->
